v7.0.1/_sources/generated/pcdsdevices.ipm.IPMMotion.rst.txt
pcdsdevices.ipm.IPMMotion
=========================

.. currentmodule:: pcdsdevices.ipm

.. autoclass:: IPMMotion

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - lightpath_summary
          - :class:`~pcdsdevices.signal.SummarySignal`
          - 
          - 
          - omitted
          - Inherited from :class:`~pcdsdevices.interface.LightpathMixin`
    
        * - target
          - :class:`~pcdsdevices.ipm.IPMTarget`
          - ``:TARGET``
          - 
          - normal
          - 
    
        * - diode
          - :class:`~pcdsdevices.ipm.IPMDiode`
          - ``:DIODE``
          - 
          - normal
          - 
    

    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: calc_lightpath_state
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: get_lightpath_state
    .. automethod:: insert
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: remove
    .. automethod:: screen
    .. automethod:: stage_group_instances
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: target_in
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: lightpath_cpts
    .. autoattribute:: md
    .. autoattribute:: needs_parent
    .. autoattribute:: stage_group
    .. autoattribute:: subscriptions
    .. autoattribute:: transmission
    
    